--- a/src/app/modules/loan/cl-application-header/cl-application-header.component.html
+++ b/src/app/modules/loan/cl-application-header/cl-application-header.component.html
@@ -115,14 +115,14 @@
 
       </div>
       <div class="form-group kt-form__group row">
+<!--        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">-->
+<!--          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--            <input matInput placeholder="LC NO" formControlName="LoanAutoNo" readonly="readonly" autocomplete="off" />-->
+<!--            <mat-error *ngIf="hasError('LoanAutoNo', 'required')">"LC NO <strong>required</strong></mat-error>-->
+<!--          </mat-form-field>-->
+<!--        </div>-->
         <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-            <input matInput placeholder="LC NO" formControlName="LoanAutoNo" readonly="readonly" autocomplete="off" />
-            <mat-error *ngIf="hasError('LoanAutoNo', 'required')">"LC NO <strong>required</strong></mat-error>
-          </mat-form-field>
-        </div>
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
-          
+
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Circle <strong class="matMandatory">*</strong></mat-label>
             <mat-select formControlName="CircleID">
@@ -153,7 +153,7 @@
             <!--  <mat-error *ngIf="hasError('Zone', 'required')">Zone <strong>required</strong></mat-error>-->
           </mat-form-field>
         </div>
-        
+
       </div>
 
     </div>
