--- a/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.html
+++ b/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.html
@@ -156,7 +156,7 @@
                 <ng-container matColumnDef="InstallmentFreq">
                   <mat-header-cell [style.min-width]="_dateWidth" *matHeaderCellDef mat-sort-header>Installment Freq</mat-header-cell>
                   <mat-cell [style.min-width]="_dateWidth" *matCellDef="let apiLog">{{apiLog.ResponseDateTime |date:'medium'}}</mat-cell>
-                </ng-container>        
+                </ng-container>
 
                 <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;" class="table-header-background"></mat-header-row>
 
@@ -231,7 +231,7 @@
         <div class="kt-form__actions kt-form__actions--solid">
           <div class="row text-center">
             <div class="col-lg-12">
-              <button mat-raised-button color="primary">Submit</button>&nbsp;&nbsp;
+              <button mat-raised-button color="primary" (click)="close()">Submit</button>&nbsp;&nbsp;
               <button type="button" class="button-red" mat-raised-button cdkFocusInitial (click)="onCloseClick()">
                 Close
               </button>
