--- a/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
+++ b/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
@@ -76,7 +76,7 @@
           <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Cell No <strong class="matMandatory">*</strong></mat-label>
-              <input matInput formControlName="PhoneCell" appNumberOnly>
+              <input maxlength="11" matInput formControlName="PhoneCell" appNumberOnly>
             </mat-form-field>
           </div>
           <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
