--- a/src/app/modules/loan/cl-purpose/cl-purpose.component.html
+++ b/src/app/modules/loan/cl-purpose/cl-purpose.component.html
@@ -92,17 +92,7 @@
         </div>
 
       </div>
-      <div class="form-group kt-form__group row">
-        <div class="col-lg-12 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-            <mat-label class="customMatLabel">Remarks <strong class="matMandatory">*</strong></mat-label>
-            <!--<input matInput placeholder="Enter Market Price" formControlName="NecessitiesDetail"/>-->
-            <textarea matInput placeholder="Enter Market Price" formControlName="NecessitiesDetail"></textarea>
-            <mat-error *ngIf="hasError('NecessitiesDetail', 'required')">Remarks <strong>required</strong></mat-error>
-          </mat-form-field>
-        </div>
 
-      </div>
       <div class="form-group kt-form__group row">
         <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -117,7 +107,7 @@
             <mat-error *ngIf="hasError('AmountRequired', 'required')">Loan Applied <strong>required</strong></mat-error>
           </mat-form-field>
         </div>
-       </div> 
+       </div>
         <div class="form-group kt-form__group row">
         <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mt-2">
           <mat-checkbox class="example-margin" [(ngModel)]="isCheckedEquity" [ngModelOptions]="{standalone: true}">Check Equity</mat-checkbox>
@@ -131,6 +121,17 @@
           </mat-radio-group>
         </div>
       </div>
+        <div class="form-group kt-form__group row mt-2">
+            <div class="col-lg-12 kt-margin-bottom-20-mobile">
+                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                    <mat-label class="customMatLabel">Remarks <strong class="matMandatory">*</strong></mat-label>
+                    <!--<input matInput placeholder="Enter Market Price" formControlName="NecessitiesDetail"/>-->
+                    <textarea matInput placeholder="Enter Market Price" formControlName="NecessitiesDetail"></textarea>
+                    <mat-error *ngIf="hasError('NecessitiesDetail', 'required')">Remarks <strong>required</strong></mat-error>
+                </mat-form-field>
+            </div>
+
+        </div>
       <div class="form-group kt-form__group row">
         <div class="col-lg-3 mt-1p">
           <button style="background-color: #01671B;" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSavePurpose()">
