--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
@@ -109,7 +109,7 @@
                   <div class="flex flex-shrink-0 items-center mt-3 sm:mt-0">
 
                       <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button class="mat-primary"
-                              type="button" (click)="search()"><mat-icon class="mr-2">search</mat-icon> Search</button>
+                              type="button" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Search</button>
                   </div>
               </div>
 
