--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -116,7 +116,7 @@
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" class="mat-primary" mat-raised-button color="accent"
-                            type="button" (click)="getBorrower()">
+                            type="button" (click)="find()">
                         <mat-icon class="mr-2">search</mat-icon>
                         Search
                     </button>
