--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -212,7 +212,7 @@
                                 mb-2
                             "
                             type="button"
-                            (click)="searchVendor()"
+                            (click)="find()"
                         >
                             <mat-icon class="mr-2">search</mat-icon> Search
                         </button>
