--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -21,7 +21,7 @@
       <div class="collapse" id="collapseExample">
         <div class="card card-body">
     <!-- Header -->
-    <div class="py-4" [formGroup]="borrowerForm">
+    <div  [formGroup]="borrowerForm">
 
         <div class="row ">
             <div class="col-lg-3 col-sm-12">
@@ -115,7 +115,7 @@
             <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-                    <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" class="mat-primary" mat-raised-button color="accent"
+                    <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" class=" bg-gray-500 mat-primary" mat-raised-button color="accent"
                             type="button" (click)="getBorrower()">
                         <mat-icon class="mr-2">search</mat-icon>
                         Search
