--- a/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
+++ b/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
@@ -37,7 +37,7 @@
                     <div class="custom-accordion-head border-0" (click)="toggleAccordion(i)"
                          style="cursor: pointer">
                         <div class="ml-8" style="align-self: center;">
-                            <span class="font-bold text-green">
+                            <span class="font-bold text-md text-green">
                                 {{parent_configuration.KeyName}}
                             </span>
                         </div>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="custom-accordion-body bg-white border-t bg-gray-50 rounded" id="{{'table_'+i}}" style="display: none">
-                        <table class="table table-responsive" style="display: inline-table !important;">
+                        <table class="table table-responsive bg-gray-50" style="display: inline-table !important;">
                             <thead class="thead-light">
                             <tr>
                                 <th>Sr.</th>
