--- a/src/app/modules/customer/correction-phone/correction-phone.component.html
+++ b/src/app/modules/customer/correction-phone/correction-phone.component.html
@@ -52,7 +52,7 @@
             <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile">
               <div class="form-group kt-form__group row"> 
                 <div class="col-lg-2 kt-margin-bottom-20-mobile">
-                  <input type="button" mat-raised-button color="primary" class=" mt-2 mat-raised-button mat-button-base mat-primary searchLCBtn"  value="Find" (click)="find()" />
+                  <input type="button" mat-raised-button color="primary" class=" bg-gray-500 mt-2 mat-raised-button mat-button-base mat-primary searchLCBtn"  value="Find" (click)="find()" />
                     <!-- <button mat-raised-button color="primary" (click)="find()">Find</button> -->
                 </div>
             </div>
