--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -148,7 +148,7 @@
 
                                 <button data-bs-toggle="collapse" data-bs-target="#collapseExample"
                                         aria-expanded="false"
-                                        class=" mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                                        class=" mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500"
                                         mat-raised-button
                                         type="button"
                                         (click)="searchCustomer()">
