--- a/src/app/modules/khaad-seed-vendor/vendor-radius/vendor-radius.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-radius/vendor-radius.component.html
@@ -31,7 +31,7 @@
 
 
         <row class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
@@ -56,7 +56,7 @@
         
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -79,7 +79,7 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -94,10 +94,7 @@
                     </mat-form-field>
                 </div>
             </div>
-        </row>
-
-        <row class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -112,7 +109,11 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-4">
+        </row>
+
+        <row class="row">
+
+            <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -127,7 +128,7 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -137,17 +138,13 @@
                     </mat-form-field>
                 </div>
             </div>
-        </row>
-
-        <row class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-                    <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button class="mat-raised-button mat-button-base mat-primary"
+                    <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button class=" mt-2 bg-gray-500 mat-raised-button mat-button-base mat-primary"
                             type="button" (click)="onSelect()"><mat-icon class="mr-2">search</mat-icon> Search</button>
                 </div>
             </div>
-
         </row>
 
 
