--- a/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
+++ b/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
@@ -126,7 +126,7 @@
                 <div class="col-lg-2 kt-margin-bottom-20-mobile mt-2">
                   <!--<input type="button" mat-raised-button color="primary" class=" mat-raised-button mat-button-base mat-primary searchLCBtn" (click)="getSubProposalGL()" value="Search" [disabled]="submitted || viewOnly" />-->
                   <input type="button" mat-raised-button color="primary"
-                    class=" mat-raised-button mat-button-base mat-primary searchLCBtn" (click)="getSubProposalGL(true)"
+                    class=" mat-raised-button mat-button-base mat-primary bg-gray-500 searchLCBtn" (click)="getSubProposalGL(true)"
                     value="Search" [disabled]="submitted || viewOnly" />
                 </div>
                 <!--//tranID//DIsbID-->
