--- a/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
+++ b/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
@@ -65,7 +65,7 @@
                   </mat-form-field>
                 </div>
                 <div class="col-lg-2 mt-2">
-                  <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" color="primary" type="button" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Search</button>
+                  <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500" color="primary" type="button" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Search</button>
                 </div>
               </div>
 
