--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -6,7 +6,7 @@
     <div class="col-lg-7 col-sm-12">
         <div class="heading">Create Fense</div>
     </div>
-    <div class="col-lg-5 col-sm-12 self-center">
+    <div class="col-lg-5 col-sm-12 self-center mt-2">
         <p class="text-right">
           <button [routerLink]="['/user-management/viewCirclesfence']" class="mr-4 bg-gray-500 py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary rounded-md text-white"  >
             <mat-icon class="mr-2 text-white">visibility</mat-icon>View Map
