--- a/src/app/modules/configuration-management/document-type-list/document-type-list.component.html
+++ b/src/app/modules/configuration-management/document-type-list/document-type-list.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
-                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <button class=" mt-2 py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
                 </button>
               </p>
@@ -20,20 +20,18 @@
 
       <div class="collapse" id="collapseExample">
         <div class="card card-body">
-            <div class="row pt-4">
-                <div class="col-lg-4 col-sm-12">
+            <div class="row">
+                <div class="col-lg-3 col-sm-12">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search"
                                maxlength="30" autocomplete="off">
                         <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint>
                     </mat-form-field>
                 </div>
-            </div>
-            <div class="row my-2">
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-3 col-sm-12">
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                         <button (click)="addDocumentType()" mat-raised-button color="primary" type="button"
-                                class="btn btn-primary">
+                                class="btn btn-primary mt-2 bg-gray-500">
                             <span>New Type</span>
                         </button>
             
