--- a/src/app/modules/customer/correction-passbook/correction-passbook.component.html
+++ b/src/app/modules/customer/correction-passbook/correction-passbook.component.html
@@ -45,16 +45,13 @@
                   <input appNumberOnly matInput placeholder="Enter Cnic" formControlName="Cnic"  maxlength="13" autocomplete="off" />
                 </mat-form-field>
             </div>
+            <div class="col-lg-2 kt-margin-bottom-20-mobile">
+              <input type="button" mat-raised-button color="primary" class=" bg-gray-500 mt-2 mat-raised-button mat-button-base mat-primary searchLCBtn"  value="Find" (click)="find()" />
+                <!-- <button mat-raised-button color="primary" (click)="find()">Find</button> -->
+            </div>
           </div>
       
-    
-      
-          <div class="form-group kt-form__group row"> 
-              <div class="col-lg-2 kt-margin-bottom-20-mobile">
-                <input type="button" mat-raised-button color="primary" class=" mat-raised-button mat-button-base mat-primary searchLCBtn"  value="Find" (click)="find()" />
-                  <!-- <button mat-raised-button color="primary" (click)="find()">Find</button> -->
-              </div>
-          </div>
+  
 
     </div>
   </div>
