--- a/src/app/modules/customer/eligibility-request/eligibility-request.component.html
+++ b/src/app/modules/customer/eligibility-request/eligibility-request.component.html
@@ -136,7 +136,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center  mt-2">
-                            <button data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                            <button class="bg-gray-500" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                                     aria-expanded="false" aria-controls="collapseExample"
                                     (click)="getEligibilityRequestData()" mat-flat-button [color]="'primary'">
                                 <mat-icon class="mr-2">search</mat-icon>
