--- a/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
+++ b/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="col-lg-3 col-sm-12 self-center">
                 <p class="text-right">
-                    <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                         <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
                     </button>
                   </p>
@@ -24,7 +24,7 @@
           <div class="collapse" id="collapseExample">
             <div class="card card-body">
                 <div class="row">
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
                                 <mat-label class="customMatLabel">Zone</mat-label>
@@ -46,7 +46,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
@@ -68,7 +68,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">CNIC#</mat-label>
                                 <input appNumberOnly matInput (keyup)="changed($event)" placeholder="Enter Cnic"
@@ -76,11 +76,9 @@
             
                             </mat-form-field>
                     </div>
-                </div>
-                <div class="form-group kt-form__group row">
-                    <div class="col-lg-2 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-3 kt-margin-bottom-20-mobile">
                         <input type="button" mat-raised-button color="primary"
-                               class=" mat-raised-button mat-button-base mat-primary searchLCBtn" value="Find" (click)="find()"
+                               class=" mat-raised-button mat-button-base mat-primary searchLCBtn mt-2 bg-gray-500" value="Find" (click)="find()"
                                [disabled]="viewOnly"/>
         
                     </div>
