--- a/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
+++ b/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
-                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
                 </button>
               </p>
@@ -92,20 +92,6 @@
                     </div>
                 </div>
             </div>
-        <!--    <div class="col-lg-3 col-sm-12">-->
-        <!--        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
-        <!--            <mat-label>Branch</mat-label>-->
-        <!--            <input matInput value="{{Branch.Name}}" readonly="readonly" maxlength="30" autocomplete="off">-->
-        <!--            &lt;!&ndash;  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>&ndash;&gt;-->
-        <!--        </mat-form-field>-->
-        <!--    </div>-->
-        
-        
-        </div>
-        
-        
-        
-        <div class="row">
             <div class="col-lg-3 col-sm-12">
                 <div class="col-md-12 kt-margin-bottom-10-mobile">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -141,6 +127,21 @@
                     </mat-form-field>
                 </div>
             </div>
+        <!--    <div class="col-lg-3 col-sm-12">-->
+        <!--        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+        <!--            <mat-label>Branch</mat-label>-->
+        <!--            <input matInput value="{{Branch.Name}}" readonly="readonly" maxlength="30" autocomplete="off">-->
+        <!--            &lt;!&ndash;  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>&ndash;&gt;-->
+        <!--        </mat-form-field>-->
+        <!--    </div>-->
+        
+        
+        </div>
+        
+        
+        
+        <div class="row">
+
             <div class="col-lg-3 col-sm-12">
                 <div class="col-md-12 kt-margin-bottom-10-mobile">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -175,6 +176,13 @@
                 </div>
         
             </div>
+            <div class="col-lg-2 col-md-3">
+                <div class="col-lg-4 col-sm-12">
+                    <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" class=" mt-2 bg-gray-500 mat-focus-indicator mat-flat-button mat-button-base mat-primary mat-raised-button"  [disabled]="deceasedCustomerSearch.invalid" (click)="SearchDeceasedCustomer()" color="primary" >
+                        <mat-icon class="mr-2">search</mat-icon> Search
+                    </button>
+                </div>
+            </div>
         
         
         </div>
@@ -191,16 +199,7 @@
                     </button>
                   </div>
                   </div> -->
-                <div class="row align-items-center mb-4">
-                    <div class="col-lg-2 col-md-3">
-                        <div class="col-lg-4 col-sm-12">
-                            <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" class="mat-focus-indicator mat-flat-button mat-button-base mat-primary mat-raised-button"  [disabled]="deceasedCustomerSearch.invalid" (click)="SearchDeceasedCustomer()" color="primary" >
-                                <mat-icon class="mr-2">search</mat-icon> Search
-                            </button>
-                        </div>
-                    </div>
-                </div>
-        
+
                 <!-- <div class="row align-items-center mb-4">
                   <div  class="col-lg-3 col-md-3"></div>
                   <div class="col-lg-9 col-md-9">
