--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -22,7 +22,7 @@
     <div class="collapse" id="collapseExample">
         <div class="card card-body">
             <div
-            [formGroup]="loanutilizationSearch" class="mt-4">
+            [formGroup]="loanutilizationSearch">
     
     
             <div class="row">
@@ -185,22 +185,21 @@
     
     
         </div>
+        <div class="col-lg-3 col-sm-12">
+            <div class="flex flex-shrink-0 items-center  mb-2">
+                <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
+                aria-controls="collapseExample" (click)="searchloanutilization()" class="mt-2 bg-gray-500" mat-flat-button [color]="'primary'">
+                    <mat-icon class="mr-2">search</mat-icon> Search
+                </button>
+            </div>
+        </div>
     
     
     
     
     
             </div>
-            <div class="row">
-                <div class="col-lg-6 col-sm-12">
-                    <div class="flex flex-shrink-0 items-center  mb-2">
-                        <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
-                        aria-controls="collapseExample" (click)="searchloanutilization()" mat-flat-button [color]="'primary'">
-                            <mat-icon class="mr-2">search</mat-icon> Search
-                        </button>
-                    </div>
-                </div>
-            </div>
+
         </div>
         </div>
     </div>
