--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -129,7 +129,7 @@
         <div class="col-md-3 col-sm-12 pb-2">
         <div class="flex flex-shrink-0 items-center">
           <button data-bs-toggle="collapse" data-bs-target="#collapseExample"
-          aria-expanded="false" (click)="searchloanutilization()" mat-flat-button [color]="'primary'">
+          aria-expanded="false" (click)="searchloanutilization()" class="bg-gray-500" mat-flat-button [color]="'primary'">
             <mat-icon class="mr-2">search</mat-icon> Search
           </button>
         </div>
