--- a/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
+++ b/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
@@ -111,7 +111,7 @@
       </mat-accordion> -->
 
 
-    <section matSort class="mat-elevation-z2 mat-header-row bg-green">
+    <section matSort class="mat-elevation-z2 mat-header-row bg-green api-table">
         <span class="mat-header-cell text-white" mat-sort-header="Id" style="width: 10px;">ID</span>
         <span class="mat-header-cell text-white" mat-sort-header="TransactionId">Transaction ID</span>
         <span class="mat-header-cell text-white" mat-sort-header="ApiName">API Name</span>
