--- a/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
+++ b/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
-                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
                 </button>
               </p>
@@ -20,10 +20,10 @@
 
       <div class="collapse" id="collapseExample">
         <div class="card card-body">
-            <div class="pt-4" [formGroup]="RfrlForm">
+            <div  [formGroup]="RfrlForm">
 
                 <div class="row">
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
         
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
@@ -49,7 +49,7 @@
                 
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
         
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -73,7 +73,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
         
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -84,10 +84,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                </div>
-        
-                <div class="row">
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
         
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -101,7 +98,11 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12">
+                </div>
+        
+                <div class="row">
+
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
         
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -110,8 +111,8 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                    <div class="col-lg-3 col-sm-12">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Request Category <strong class="matMandatory">*</strong></mat-label>
                                 <mat-select (selectionChange)="onSelectionChange($event)" formControlName="RequestCategory">
@@ -123,12 +124,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                </div>
-        
-        
-        
-                <div class="row">
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" *ngIf="graceMonthsSelect">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Grace Months <strong class="matMandatory">*</strong></mat-label>
@@ -140,7 +136,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Manager PPNO <strong class="matMandatory">*</strong></mat-label>
@@ -149,17 +145,11 @@
                             </mat-form-field>
                         </div>
                     </div>
-                </div>
-        
-        
-        
-                <div class="row py-3">
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 ">
-                            <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Search</button>
+                            <button class="bg-gray-500" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Search</button>
                         </div>
                     </div>
-        
                 </div>
         
         
