--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -20,7 +20,7 @@
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mb-2">
-                        <button class="mt-2" (click)="find()"  mat-flat-button [color]="'primary'">
+                        <button class="mt-2 bg-gray-500" (click)="find()"  mat-flat-button [color]="'primary'">
                             <mat-icon class="mr-2">search</mat-icon> Search
                         </button>
                     </div>
