--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
@@ -104,11 +104,11 @@
 
 
 
-          <div class="row py-2">
+          <div class="row">
               <div class="col-lg-3 col-sm-12">
                   <div class="flex flex-shrink-0 items-center mt-3 sm:mt-0">
 
-                      <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button class="mat-primary"
+                      <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button class="bg-gray-500 mat-primary"
                               type="button" (click)="search()"><mat-icon class="mr-2">search</mat-icon> Search</button>
                   </div>
               </div>
