--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -113,7 +113,7 @@
                                 </mat-error>
                                 <mat-error *ngIf="hasError('Cnic', 'pattern')"><strong>{{errors.cnic}}</strong>
                                 </mat-error>
-                                <mat-hint align="left">Please enter CNIC <strong>(Numeric)</strong></mat-hint>
+                                <mat-hint align="left">Please enter CNIC</mat-hint>
                             </mat-form-field>
                         </div>
 
@@ -335,7 +335,7 @@
                                 </mat-error>
                                 <mat-error *ngIf="hasError('Ntn', 'sequentialError')">
                                     <strong>{{errors.sequential}}</strong></mat-error>
-                                <mat-hint align="left">Please enter Ntn No <strong>(Numeric)</strong></mat-hint>
+                                <mat-hint align="left">Please enter Ntn No</mat-hint>
                             </mat-form-field>
                         </div>
 
@@ -398,7 +398,7 @@
                                             <strong>{{errors.mobile}}</strong></mat-error>
                                         <mat-error *ngIf="hasError('CellNumber', 'sequentialError')">
                                             <strong>{{errors.sequential}}</strong></mat-error>
-                                        <mat-hint align="left">Please enter Cell No <strong>(Numeric)</strong>
+                                        <mat-hint align="left">Please enter Cell No
                                         </mat-hint>
                                     </mat-form-field>
                                 </div>
@@ -416,7 +416,7 @@
                                     <strong>{{errors.seventothirteen}}</strong></mat-error>
                                 <mat-error *ngIf="hasError('PhoneNumber', 'sequentialError')">
                                     <strong>{{errors.sequential}}</strong></mat-error>
-                                <mat-hint align="left">Please enter Residence No <strong>(Numeric)</strong></mat-hint>
+                                <mat-hint align="left">Please enter Residence No</mat-hint>
                             </mat-form-field>
                         </div>
 
@@ -448,7 +448,7 @@
                                     <strong>required</strong></mat-error>
                                 <mat-error *ngIf="hasError('OfficePhoneNumber', 'pattern')">
                                     <strong>{{errors.seventothirteen}}</strong></mat-error>
-                                <mat-hint align="left">Please enter Office No <strong>(Numeric)</strong></mat-hint>
+                                <mat-hint align="left">Please enter Office No</mat-hint>
 
                             </mat-form-field>
                         </div>
@@ -465,7 +465,7 @@
                                     <strong>{{errors.seventothirteen}}</strong></mat-error>
                                 <mat-error *ngIf="hasError('FaxNumber', 'sequentialError')">
                                     <strong>{{errors.sequential}}</strong></mat-error>
-                                <mat-hint align="left">Please enter Fax No <strong>(Numeric)</strong></mat-hint>
+                                <mat-hint align="left">Please enter Fax No</mat-hint>
                             </mat-form-field>
                         </div>
 
