--- a/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
+++ b/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
@@ -124,7 +124,7 @@
           <div>
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Phone Number <strong class="matMandatory">*</strong></mat-label>
-              <input matInput appNumberOnly placeholder="Enter Vendor's Phone Number'" formControlName="PhoneNumber" maxlength="13"  autocomplete="off" [readonly]="viewOnly" />
+              <input matInput appNumberOnly placeholder="Enter Vendor's Phone Number'" formControlName="PhoneNumber" maxlength="13" minlength="13" autocomplete="off" [readonly]="viewOnly" />
             </mat-form-field>
           </div>
 
